--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: sudo apt-get install flatpak
+      - run: sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
       - run: sudo flatpak install flathub org.freecad.FreeCAD
       - name: Check out repository
         uses: actions/checkout@v4
